# neuropack

./: .gitignore  Cargo.toml  README.md  benchmark.json
.github/workflows/: ci.yml
docs/: corrupted-chunk-scenario.md
src/: asset_scanner.rs  benchmark.rs  classifier.rs  compression.rs  config.rs  decompression.rs  dictionary.rs  duplicate.rs  ffi.rs  format.rs  game_optimizations.rs  gui.rs  incremental.rs  lib.rs  main.rs  patch.rs  progress.rs  signing.rs
testdata/: bench.json  hoi4_bench.json  hoi4_bench2.json  v1.neuropack  v1_to_v2.neuropack
testdata/v1/meshes/: enemy.glb
testdata/v1_restored/meshes/: hero.glb
testdata/v2/meshes/: hero.glb
tests/: roundtrip.rs
unity_plugin/com.neuropack.runtime/: package.json
unity_plugin/com.neuropack.runtime/Editor/: NeuroPack.Editor.asmdef  NeuropackImporter.cs
unity_plugin/com.neuropack.runtime/Runtime/: NeuroPack.asmdef  NeuroPack.cs
unreal_plugin/NeuroPack/: NeuroPack.uplugin
unreal_plugin/NeuroPack/Source/NeuroPack/: NeuroPack.Build.cs
unreal_plugin/NeuroPack/Source/NeuroPack/Private/: NeuropackModule.cpp
unreal_plugin/NeuroPack/Source/NeuroPack/Public/: NeuroPack.h
